--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-async-handler": "^1.1.4",
+		"form-data": "^4.0.0",
 		"joi": "^17.4.0",
 		"jsonwebtoken": "^8.5.1",
 		"lodash": "^4.17.21",
 		"mongoose": "^5.11.19",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"node-fetch": "^2.6.1"
 	}
 }
